Working on code block in chatbot fixed scrollbar issue

--- a/Frontend/src/components/History/HistoryBar.module.css
+++ b/Frontend/src/components/History/HistoryBar.module.css
@@ -137,6 +137,14 @@
 }
 .removeFilter{
     margin-left: auto;
+    color:rgba(207, 38, 38, 0.709);
+    flex-shrink: 0;
+    transition: box-shadow 0.25s ease, color 0.25s ease, font-size 0.25s ease;
+}
+.removeFilter:hover{
+    color:rgba(219, 47, 47, 0.709);
+    font-size: 14px;
+    box-shadow: 0px 2px 18px 0px rgba(0,0,0,0.6);
 }
 .icon{
     margin:10px;
